# high_performance_python_labs

./: .gitignore  README.md
labs/lab01/: lab01.py  lab01.py.lprof  pyproject.toml  Отчет.md
labs/lab02/: build.py  gauss_seidel_cpp.cpp  lab02.py  pyproject.toml  Отчет.md
labs/lab03/: Dockerfile.lab01  Dockerfile.lab02  Dockerfile.web  docker-compose.yml  server.py  Отчет.md
