[tool.poetry]
name = "lab02"
version = "0.1.0"
description = "Лабораторная работа 2"
authors = ["Emelyanov Matvey"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.8"
numba = ">=0.63.1,<0.64.0"
pybind11 = "2.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "^1.15.0"
line-profiler = "^5.0.0"
setuptools = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools", "pybind11>=2.10.0"]
build-backend = "poetry.core.masonry.api"
